# webbits

./: .gitignore  CHANGELOG  LICENSE  Setup.hs  Setup.lhs  Testing.hs  WebBits.cabal  language-ecmascript.cabal
java/: RhinoTest.java
scripts/: fetch-test-js  ghci  rt  wt
src/: PrettyTest.hs  UnitTest.hs  Webbits.hs
src/BrownPLT/: Common.hs  Html.hs  JavaScript.hs  Test.hs
src/BrownPLT/Html/: Html.hs  Instances.hs  PermissiveParser.hs  PrettyPrint.hs  RawScript.hs  Syntax.hs
src/BrownPLT/JavaScript/: Combinators.hs  Crawl.hs  Environment.hs  HtmlEmbedding.hs  Instances.hs  LabelSets.hs  Lexer.hs  Parser.hs  PrettyPrint.hs  Syntax.hs
src/BrownPLT/JavaScript/Analysis/: Environment.hs  LabelSets.hs
src/BrownPLT/JavaScript/Syntax/: Annotations.hs
src/Language/: ECMAScript3.hs  ECMAScript5.hs
src/Language/ECMAScript3/: Lexer.hs  Parser.hs  PrettyPrint.hs  SourceDiff.hs  Syntax.hs
src/Language/ECMAScript3/Analysis/: Environment.hs  LabelSets.hs
src/Language/ECMAScript3/Parser/: State.hs  Type.hs
src/Language/ECMAScript3/Syntax/: Annotations.hs  Arbitrary.hs  QuasiQuote.hs
src/Language/ECMAScript5/: Lexer.hs  Parser.hs  ParserState.hs  PrettyPrint.hs  Syntax.hs
src/Language/ECMAScript5/Parser/: Unicode.hs  Util.hs
src/Language/ECMAScript5/Syntax/: Annotations.hs
src/Language/ECMAScript5/Test/: StatementTests.hs
src/Test/: EnvTest1.lhs  EnvTest2.lhs  EnvTest3.lhs  HtmlTest.hs  SourceDiff.hs
src/Test/Util/: Environment.hs
src/WebBits/: Common.hs  JavaScript.hs  Test.hs
src/WebBits/Data/: Zipper.hs
src/WebBits/Html/: Html.hs  Instances.hs  PermissiveParser.hs  PrettyPrint.hs  RawScript.hs  Syntax.hs
src/WebBits/JavaScript/: ANFUtils.hs  Combinators.hs  Core.hs  CoreTransform.hs  Crawl.hs  Env.hs  Environment.hs  HtmlEmbedding.hs  Instances.hs  Intraprocedural.hs  JavaScript.hs  Lexer.hs  Parser.hs  PrettyPrint.hs  Simplify.hs  Syntax.hs  ToCore.hs
test/: HtmlTest.hs  TestMain.hs  parsePrettyConsistency.hs  runtests.sh
test-data/: 7.9.2-1.js  7.9.2-3.js  7.9.2-4.js  7.9.2-6.js  7.9.2-7.js  break-label.js  break-label2.js  break-switch-label.js  break-switch.js  break.js  continue-label.js  continue-label2.js  continue-switch.js  continue-wrong-label-scope.js  dangling-else.js  do-while.js  duplicate-label.js  duplicate-label2.js  empty-for.js  empty-function.js  for-each-loop.js  for-each-no-in.js  for-in.js  for-loop.js  for-no-in.js  function-return-function.js  function-with-body.js  if-statement.js  jquery-break-isolated.js  jquery.js  label-functions.js  label-set.js  label.js  line-comments.js  new-expression-precedence.js  new-expression.js  new-member.js  non-enclosing-label.js  not-in-label-set.js  postinc-autosemi.js  (+9 more)
test/Test/: Diff.hs  ExpressionTest.hs  ExpressionTests.hs  Pretty.hs  StatementTests.hs  Unit.hs
test/diff/expects/: t1.diff
test/diff/left/: t1.js
tests/: Env1.lhs  Env2.lhs  Env3.lhs  MozSuite.hs  ParsePretty.hs  Rhino.hs  Simplify.hs  failingcases
tests/parse-pretty/: flapjax-fxinternal-22dec2008.js  object-lit-1.js  object-lit-2.js  strings.js
tests/simplify/: basic.test
