Name:           WebBits
Version:        2.2
Cabal-Version:	>= 1.6
Copyright:      Copyright (c) 2007-2011 Arjun Guha, Claudiu Saftoiu, 
                and Spiridon Eliopoulos, Copyright (c) 2011-2012 
                Andrey Chudnov
License:        BSD3
License-file:   LICENSE
Author:         Arjun Guha, Claudiu Saftoiu, Spiridon Eliopoulos, Andrey Chudnov
Maintainer:     Andrey Chudnov <oss@chudnov.com>
Homepage:       http://github.com/achudnov/webbits
Bug-reports:    http://github.com/achudnov/webbits/issues
Stability:      provisional
Category:       Language
Build-Type:     Simple
Synopsis:       A parser and a pretty printer for JavaScript.
Description: WebBits is a collection of libraries for working with JavaScript, contains a parser, pretty-printer and a lexical environment analyser. The oritinal author of the package is the PLT group of Brown University (http:\/\/www.cs.brown.edu\/research\/plt\/). Changes since version 2.1: 1) the syntax of the try-catch-finally statement has been changed in accordance to the ECMAScript specification: now it only has at most one catch clause, 2) the original test-suite needs updating to support the current test system and has been disabled until the next version; patches are welcome.

Source-repository head
   type: git
   location: git://github.com/achudnov/webbits.git
Source-repository this
   type: git
   location: git://github.com/achudnov/webbits.git
   tag: WebBits-2.2
 
Library
  Hs-Source-Dirs:
    src
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 1.1.0.1,
    parsec < 3.2.0,
    pretty >= 1,
    containers >= 0.1,
    syb >= 0.1
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:    
    DeriveDataTypeable
  Exposed-Modules:
    BrownPLT.JavaScript 
    BrownPLT.JavaScript.Lexer 
    BrownPLT.JavaScript.Parser
    BrownPLT.JavaScript.PrettyPrint
    BrownPLT.JavaScript.Syntax 
    BrownPLT.JavaScript.Environment

-- Test-Suite test-webbits
--   Type: exitcode-stdio-1.0
--   Main-Is: Test/Main.hs
--   Build-Depends:
--     base >= 4 && < 5,
--     mtl >= 1.1.0.1,
--     parsec < 3.2.0,
--     pretty >= 0.1,
--     containers >= 0.1,
--     syb >= 0.1
